BE: Add /vote definiton and implementation
- Moved /question/$id/vote to /vote/$id to ensure also voting for answers and discussions
- Added vote.dto.ts to define the request body
- Updated openapi3.0.yml
- Removed userContent type parameter of `getUserContent` request, because its not necessary
- Removed numberOfAnswers property from answers
