# backend/src/requests/questions/questions.controller.ts
@@ -18,7 +18,6 @@ import { CreateAnswerDto } from './dto/create-answer.dto';
 import { CreateQuestion } from './dto/create-question.dto';
 import { QueryParameters } from './dto/query-params.dto';
 import { SearchQuery } from './dto/search.dto';
-import { VoteDto } from './dto/vote.dto';
 
 @Controller('question') // prefix: domain/question/...
 export class QuestionsController {
@@ -66,12 +65,7 @@ export class QuestionsController {
     @Req() request: any,
     @Param('id', new ParseUUIDPipe()) id: string,
   ): Promise<object> {
-    return this.userContentService.getUserContent(
-      id,
-      UserContentType.Question,
-      request?.userId,
-      true,
-    );
+    return this.userContentService.getUserContent(id, request?.userId, true);
   }
 
   @Get(':id/title')
@@ -131,25 +125,5 @@ export class QuestionsController {
       id,
       req.userId,
     );
-  }
-  @Post(':id/vote')
-  async voteForQuestion(
-    @Param('id', new ParseUUIDPipe()) userContentId: string,
-    @Req() req: any,
-    @Body(new ValidationPipe()) vote: VoteDto,
-  ) {
-    return await this.userContentService.updateUserVote(
-      vote,
-      userContentId,
-      req.userId,
-    );
-  }
-
-  @Get(':id/vote')
-  async getVoteOfQuestion(
-    @Param('id', new ParseUUIDPipe()) userContentId: string,
-    @Req() req: any,
-  ) {
-    return await this.userContentService.getUserVote(userContentId, req.userId);
   }
 }
