# docs/openapi3.0.yml
@@ -162,8 +162,12 @@ components:
         activityPoints: 
           type: integer
     Vote:
-      type: string
-      enum: ['like', 'dislike','none']
+      type: object
+      properties:
+        vote:
+          type: string
+          enum: [ 'like', 'dislike','none' ]
+
     Quest:
       type: object
       properties:
@@ -190,6 +194,8 @@ components:
 tags:
   - name: questions
     description: All information in the questions
+  - name: vote
+    description: All information about voting for user contents
   - name: user
     description: All information related to users
   - name: tag
@@ -516,17 +522,16 @@ paths:
           description: 'Forbidden, user needs to be registered'
         '406':
           description: 'Not Acceptable, used forbidden words in request'
-
-  /question/{questionId}/vote:
+  /vote:
     post:
       tags:
-       - questions
-      summary: Vote for a question
+        - vote
+      summary: Vote for a userContentId (question, answer, discussion)
       parameters:
         - in: path
-          name: questionId
+          name: userContentId
           required: true
-          description: UUID of a question
+          description: UUID of a userContent
           schema:
             type: string
       requestBody:
@@ -543,7 +548,7 @@ paths:
             application/json:
               schema:
                 properties:
-                  id: 
+                  id:
                     type: string
         '422':
           description: 'Unprocessable Entity: Payload is not sufficient'
@@ -653,7 +658,7 @@ paths:
   /favourites/remaining:
     get:
       tags:
-        -favourites
+        - favourites
       summary: 'get how many favourites you can add till the maximum is reached. Null represents infinite.'
       responses:
         '200':
